welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: type mismatch;
 found   : Unit
 required: Int
  for (compteur <- 1 to (nums.length-1)){
                ^